--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Trigger Random</title>
+  <title>Gem Game</title>
 
   <!-- Added link to the jQuery Library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -12,6 +12,16 @@
 
 </head>
 <body>
-<h1> We work </h1>
+<div class="container">
+  <div class="jumbotron">
+   <div class="row"
+   <div class="col-md12`">
+    <p>click on the gems accumulate points and try to hit the target<p>
+    <img src="assets/images/image1.jpeg" height="80px" width="80px">
+    <img src="assets/images/image2.jpg" height="80px" width="80px">
+    <img src="assets/images/image3.jpg" height="80px" width="80px">
+   </div>
+  </div>
+</div>
 </body>
 </html>
