--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 <div class="container">
-  <div class="jumbotron">
+  <div class="jumbotron" id="mainjumbotron">
    <div class="row"
-   <div class="col-md12`">
+   <div class="col-md-12`">
     <p>click on the gems accumulate points and try to hit the target<p>
     <img src="assets/images/image1.jpeg" height="80px" width="80px">
     <img src="assets/images/image2.jpg" height="80px" width="80px">
