--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
   <div class="jumbotron" id="mainjumbotron">
    <div class="row"
    <div class="col-md-12`">
-    <p>click on the gems accumulate points and try to hit the target<p>
+    <p>You will be given a random number at the start of the game.<p>
+    <br><p> There are four crystals. By clicking on a crystal you will add a specific of points to your score.</p?
+    <br><p> You win the game by matching your total points to the random number,you lose the game if your score goes above the random number.</p>
+<br><p> The value of each crystal is hidden from you until you click upon it.</p>
+<br><p>Each time when the game starts, the ganme will change the value of the crystals.</p>
     <img src="assets/images/image1.jpeg" height="80px" width="80px">
     <img src="assets/images/image2.jpg" height="80px" width="80px">
     <img src="assets/images/image3.jpg" height="80px" width="80px">
+    <img src="assets/images/image4.jpg" height="80px" width="80px">
    </div>
   </div>
 </div>
