--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <img src="assets/images/image2.jpg" height="80px" width="80px">
     <img src="assets/images/image3.jpg" height="80px" width="80px">
     <img src="assets/images/image4.jpg" height="80px" width="80px">
+    <section id="section2">
+     <p id="totalscore">Your total score is 0</p>
+    </section>
    </div>
      
   </div>
