--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
-<body>
-<div class="container">
-//  <div class="jumbotron" id="mainjumbotron">
+<body onload="initialize()">
+  <div class="jumbotron" id="mainjumbotron">
   <div class="container">
    <div class="row"
    <div class="col-md-12">
