--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@ Each time when the game starts, the ganme will change the value of the crystals.
     </section>
      <section id="section1">
        <p id="target"> target </p>
-     </section>
-    <img src="assets/images/image1.jpeg" height="80px" width="80px">
-    <img src="assets/images/image2.jpg" height="80px" width="80px">
-    <img src="assets/images/image3.jpg" height="80px" width="80px">
-    <img src="assets/images/image4.jpg" height="80px" width="80px">
+     </section id="imagesection">
+         <img src="assets/images/image1.jpeg" height="80px" width="80px">
+         <img src="assets/images/image2.jpg" height="80px" width="80px">
+         <img src="assets/images/image3.jpg" height="80px" width="80px">
+         <img src="assets/images/image4.jpg" height="80px" width="80px">
+    </section>
     <section id="section2">
      <p id="totalscore">Your total score is 0</p>
     </section>
