--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p>You will be given a random number at the start of the game.
        There are four crystals. By clicking on a crystal you will add a specific of points to your score.
        You win the game by matching your total points to the random number,you lose the game if your score goes above the random number.
-The value of each crystal is hidden from you until you click upon it.</p>
+The value of each crystal is hidden from you until you click upon it.
 Each time when the game starts, the ganme will change the value of the crystals.</p>
     </section>
      <section id="section1">
