--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        There are four crystals. By clicking on a crystal you will add a specific of points to your score.
        You win the game by matching your total points to the random number,you lose the game if your score goes above the random number.
 The value of each crystal is hidden from you until you click upon it.
-Each time when the game starts, the ganme will change the value of the crystals.</p>
+Each time when the game starts, the game will change the value of the crystals.</p>
     </section>
      <section id="section1">
        <p id="target"> target </p>
