--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ Each time when the game starts, the game will change the value of the crystals.<
      <section id="section1">
        <p id="target"> target </p>
      </section id="imagesection">
+         <a href="javascript:process1()">
          <img src="assets/images/image1.jpeg" height="80px" width="80px">
          <img src="assets/images/image2.jpg" height="80px" width="80px">
          <img src="assets/images/image3.jpg" height="80px" width="80px">
