--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@ Each time when the game starts, the game will change the value of the crystals.<
      </section id="imagesection">
          <a href="javascript:process1()">
          <img src="assets/images/image1.jpeg" height="80px" width="80px">
+         <a href="javascript:process2()">
          <img src="assets/images/image2.jpg" height="80px" width="80px">
+         <a href="javascript:process3()">
          <img src="assets/images/image3.jpg" height="80px" width="80px">
+         <a href="javascript:process4()">
          <img src="assets/images/image4.jpg" height="80px" width="80px">
     <div id ="winslosses">
         <p id="wins">wins </p> 
