--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Each time when the game starts, the game will change the value of the crystals.<
          <img src="assets/images/image4.jpg" height="80px" width="80px">
     <div id ="winslosses">
         <p id="wins">wins </p> 
-        <br><p id=loses"> loses</p>
+        <br><p id="loses"> loses</p>
     </div> 
     </section>
     <section id="section2">
