--- a/index1.html
+++ b/index1.html
@@ -48,6 +48,6 @@ Each time when the game starts, the game will change the value of the crystals.<
      
   </div>
 </div>
-<script type="text/javascript" src="gemgame.js"></script>
+<script type="text/javascript" src="gemgame1.js"></script>
 </body>
 </html>
