--- a/index1.html
+++ b/index1.html
@@ -28,9 +28,9 @@ Each time when the game starts, the game will change the value of the crystals.<
      <section id="section1">
        <p id="target"> target </p>
      </section id="imagesection">
-         <a href="javascript:process1()" id="gem1" class="gemprocess">
+         <a href="javascript:process()" id="gem1" class="gemprocess">
          <img src="assets/images/image1.jpeg" height="80px" width="80px">
-         <a href="javascript:process2()" id="gem2" class="gemprocess">
+         <a href="javascript:process()" id="gem2" class="gemprocess">
          <img src="assets/images/image2.jpg" height="80px" width="80px">
          <a href="javascript:process3()" id="gem3" class="gemprocess">
          <img src="assets/images/image3.jpg" height="80px" width="80px">
