--- a/index1.html
+++ b/index1.html
@@ -28,14 +28,14 @@ Each time when the game starts, the game will change the value of the crystals.<
      <section id="section1">
        <p id="target"> target </p>
      </section id="imagesection">
-         <a href="javascript:process1()" id="gem1">
-         <img src="assets/images/image1.jpeg" id="image-gem1"height="80px" width="80px">
-         <a href="javascript:process2()" id="gem2">
-         <img src="assets/images/image2.jpg" id="image-gem2" height="80px" width="80px">
-         <a href="javascript:process3()" id="gem3">
-         <img src="assets/images/image3.jpg" id ="image-gem3" height="80px" width="80px">
-         <a href="javascript:process4()" id="gem4">
-         <img src="assets/images/image4.jpg" height="80px" id="image-gem4" width="80px">
+         <a href="javascript:process()" id="gem1" class="selection">
+         <img src="assets/images/image1.jpeg" id="image-gem1" height="80px" width="80px" class="selection">
+         <a href="javascript:process()" id="gem2" class="selection">
+         <img src="assets/images/image2.jpg" id="image-gem2" height="80px" width="80px" class="selection">
+         <a href="javascript:process()" id="gem3" class="selection">
+         <img src="assets/images/image3.jpg" id ="image-gem3" height="80px" width="80px" class="selection">
+         <a href="javascript:process()" id="gem4" class="selection">
+         <img src="assets/images/image4.jpg" height="80px" id="image-gem4" width="80px" class="selection">
     <div id ="winslosses">
         <p id="wins">wins </p> 
         <br><p id="loses"> loses</p>
