--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
 </head>
 <body onload="initialize()">
+  <div id="cc" class="jumbotron">
+   <div class="row">
+    <div class="col-md-6">
+     <p> Crystal Collector!</p>
+    </div>
+   </div>
+  </div>
   <div class="jumbotron" id="mainjumbotron">
   <div class="container">
    <div class="row"
